codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  是 否 运 行 以 下 命 令 ？

  原 因 ： need filesystem access

  权 限 规 则 ： 网 络 ； 读 取  `/tmp/readme.txt`； 写 入  `/tmp/out.txt`

  $ cat /tmp/readme.txt

› 1. 是 ， 继 续  (y)
  2. 否 ， 告 诉  Codex 换 个 做 法  (esc)

  按  enter 确 认 或  esc 取 消
