codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  是 否 运 行 以 下 命 令 ？

  线 程 ： Robie [explorer]

  $ echo hi

› 1. 是 ， 继 续  (y)
  2. 否 ， 告 诉  Codex 换 个 做 法  (esc)

  Press enter 确 认 或  esc 取 消  或  o 打 开 线 程
