codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  要 授 予 这 些 权 限 吗 ？

  原 因 ： need workspace access

  权 限 规 则 ： network; 读 取  `/tmp/readme.txt`; 写 入  `/tmp/out.txt`

› 1. 是 ， 授 予 这 些 权 限  (y)
  2. 是 ， 授 予 这 些 权 限  for this session (a)
  3. 否 ， 不 授 予 权 限 并 继 续  (n)

  按  enter 确 认 ， 或 按  esc 取 消
